# RASystem

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  SKILLS.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml  release.yml
app/: README.md
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs  secure_window.rs
app/ui/: index.html  main.js  overlay.html  overlay.js  strip.html  strip.js  style.css
controller/: README.md
controller/src-tauri/: Cargo.toml  tauri.conf.json
controller/src-tauri/capabilities/: default.json
controller/src-tauri/icons/: icon.icns
controller/src-tauri/src/: main.rs
controller/ui/: index.html  main.js  style.css
crates/ras-audio-linux/: Cargo.toml
crates/ras-audio-linux/src/: capture.rs  lib.rs
crates/ras-audio-macos/: Cargo.toml
crates/ras-audio-macos/src/: capture.rs  lib.rs
crates/ras-audio-opus/: Cargo.toml
crates/ras-audio-opus/src/: lib.rs
crates/ras-audio-windows/: Cargo.toml
crates/ras-audio-windows/src/: capture.rs  lib.rs
crates/ras-audit/: Cargo.toml
crates/ras-audit/src/: lib.rs
crates/ras-bootstrap/: Cargo.toml
crates/ras-bootstrap/src/: lib.rs
crates/ras-clipboard/: Cargo.toml
crates/ras-clipboard/src/: lib.rs
crates/ras-control/: Cargo.toml
crates/ras-control/src/: lib.rs
crates/ras-core/: Cargo.toml
crates/ras-core/benches/: hot_paths.rs
crates/ras-core/examples/: loopback_demo.rs
crates/ras-core/src/: abr.rs  deps.rs  event.rs  frame_channel.rs  iroh_transport.rs  lib.rs  session.rs  testkit.rs
crates/ras-cursor-linux/: Cargo.toml
crates/ras-cursor-linux/src/: imp.rs  lib.rs
crates/ras-cursor-macos/: Cargo.toml
crates/ras-cursor-macos/src/: imp.rs  lib.rs
crates/ras-cursor-windows/: Cargo.toml
crates/ras-cursor-windows/src/: imp.rs  lib.rs
crates/ras-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/ras-ffi/examples/: smoke.c
crates/ras-ffi/src/: lib.rs  runtime.rs
crates/ras-files/: Cargo.toml
crates/ras-files/src/: lib.rs
crates/ras-grant/: Cargo.toml
crates/ras-grant/src/: lib.rs  paseto.rs  tests.rs
crates/ras-host/: Cargo.toml
crates/ras-host/src/: main.rs
crates/ras-identity/: Cargo.toml
crates/ras-identity/src/: lib.rs
crates/ras-input-linux/: Cargo.toml
crates/ras-input-linux/examples/: pointer_roundtrip.rs
crates/ras-input-linux/src/: lib.rs  pure.rs  uinput.rs
crates/ras-input-macos/: Cargo.toml
crates/ras-input-macos/examples/: pointer_roundtrip.rs
crates/ras-input-macos/src/: lib.rs
crates/ras-input-windows/: Cargo.toml
crates/ras-input-windows/src/: lib.rs
crates/ras-media/: Cargo.toml
crates/ras-media-macos/: .gitignore  Cargo.toml
crates/ras-media-macos/examples/: capture_encode.rs
crates/ras-media-macos/src/: capture.rs  cursor.rs  encode.rs  lib.rs
crates/ras-media-openh264/: Cargo.toml
crates/ras-media-openh264/src/: lib.rs
crates/ras-media-scap/: Cargo.toml
crates/ras-media-scap/src/: lib.rs
crates/ras-media-vpx/: Cargo.toml
crates/ras-media-vpx/src/: lib.rs
crates/ras-media/src/: audio.rs  lib.rs  synthetic.rs
crates/ras-policy/: Cargo.toml
crates/ras-policy/src/: file.rs  lib.rs
crates/ras-protocol/: Cargo.toml  build.rs
crates/ras-protocol/src/: codec.rs  lib.rs
crates/ras-signal/: Cargo.toml
crates/ras-signal/src/: lib.rs  net.rs  presence.rs
crates/ras-transport-iroh/: Cargo.toml
crates/ras-transport-iroh/src/: lib.rs
docs/: 00_README.md  01_PRD.md  02_ARCHITECTURE.md  03_HLD.md  04_PROTOCOL_AND_TOKEN_SPEC.md  05_SDK_SPECIFICATION.md  06_SECURITY_AND_THREAT_MODEL.md  07_IMPLEMENTATION_PHASES.md  08_TEST_AND_RELEASE_PLAN.md  09_TRANSPORT_IROH.md  10_MEDIA_PIPELINE.md  11_HOST_PLATFORM_WINDOWS.md  12_CONTROLLER_TAURI.md  13_RISK_REGISTER_AND_CAVEATS.md  14_DECISIONS_ADR.md  15_FRAUD_AND_HARM_PREVENTION.md  16_ACCESS_AND_ENROLLMENT_MODEL.md  17_ROADMAP_AND_MILESTONES.md  18_HOST_PLATFORM_MACOS.md  19_CROSS_PLATFORM_HOST_RESEARCH.md  20_FEATURE_GAPS_AND_ROADMAP.md  21_PRODUCTION_READINESS_BACKLOG.md  22_LEARNINGS_TRACKER.md  23_OPEN_WORK_TRACKER.md  24_UI_UX.md  Remote_Access_SDK_Complete_Design_Pack.docx
docs/design/: auto-update-runbook.md  contacts-and-signaling-design.md  phase-0-design.md  phase-1-design.md  phase-2-design.md  phase-3-design.md  phase-3-linux-verification.md  phase-3-on-device-verification.md  phase-S-design.md  webapp-controller-feasibility.md
host/: README.md
host/src-tauri/: Cargo.toml  tauri.conf.json
host/src-tauri/capabilities/: default.json
host/src-tauri/icons/: icon.icns
host/src-tauri/src/: main.rs
host/ui/: index.html  main.js  overlay.js  style.css
proto/: casual_ras.proto
site/: CNAME  index.html  main.js  robots.txt  sitemap.xml  styles.css
spike/: Cargo.toml  README.md
spike/iroh-probe/: Cargo.toml
spike/iroh-probe/src/: main.rs
spike/latency-probe/: Cargo.toml
spike/latency-probe/src/: frame_source.rs  main.rs
spike/latency-probe/web/: index.html
spike/macos-capture/: .gitignore  Cargo.toml
spike/macos-capture/src/: main.rs
