[package]
name = "casual-ras"
version = "0.0.0"
edition = "2021"
rust-version = "1.90"
license = "Apache-2.0"
authors = ["Casual RAS authors"]
publish = false
description = "Casual RAS — one desktop app that both shares this screen and connects to another, over iroh."

# The single unified desktop app (ADR-062). It plays **both** roles from one binary:
#   - **Connect** (viewer): dial a host's ticket, decode H.264 → WebCodecs → canvas. Cross-platform.
#   - **Share** (agent): capture this screen, ask local Allow/Deny consent, stream over iroh, and draw
#     the viewer's remote pointer on an overlay. macOS-only until the Linux/Windows capture backends land.
#
# Kept OUT of the root crate workspace (heavy Tauri/WebView deps; not needed for the core CI gates).
#
# `default-features = false` deliberately drops `ras-core`'s `insecure-no-auth` AllowAllValidator: a
# shipping product must never link the no-op consent seam. Because that validator is `#[cfg(feature =
# "insecure-no-auth")]`, in this build the type does not exist — any code path that reached for it
# would fail to compile, not silently downgrade to no-auth. The Share role implements a real
# `GrantValidator` (local Allow/Deny) — Invariant 1 (the local user authorizes; a controller never
# self-authorizes).

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
ras-core = { path = "../../crates/ras-core", default-features = false }
ras-media = { path = "../../crates/ras-media" }
ras-protocol = { path = "../../crates/ras-protocol" }
ras-transport-iroh = { path = "../../crates/ras-transport-iroh" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Per-platform sharing backends (ADR-063). macOS uses the zero-copy hardware path
# (ScreenCaptureKit + VideoToolbox); Linux (PipeWire) and Windows (WGC) capture via scap and encode
# with the OpenH264 software encoder. The Connect (viewer) role is decode-only and works everywhere.
[target.'cfg(target_os = "macos")'.dependencies]
ras-media-macos = { path = "../../crates/ras-media-macos" }
# Phase-3 OS-input backend: the Share role feeds the viewer's input to CGEvent through this. macOS-only
# (the parallel Windows/Linux backends are later).
ras-input-macos = { path = "../../crates/ras-input-macos" }
# Read each Tauri window's NSWindow.windowNumber (the CGWindowID) so we can exclude our own
# overlay/indicator windows from the shared capture. Pure-Rust objc2, no Swift bridge.
objc2 = "0.6"

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
ras-media-scap = { path = "../../crates/ras-media-scap" }
ras-media-openh264 = { path = "../../crates/ras-media-openh264" }

[target.'cfg(target_os = "linux")'.dependencies]
# Phase-3 OS-input backend for Linux (ADR-070): XTEST over pure-Rust x11rb. Feeds the viewer's input
# to the X server on X11/Xwayland sessions.
ras-input-linux = { path = "../../crates/ras-input-linux" }

[target.'cfg(target_os = "windows")'.dependencies]
# Phase-3 OS-input backend for Windows (ADR-071): SendInput over windows-rs. In-session, no UIAccess
# (Inv 14). CI-compile-gated until Windows hardware/runner is available.
ras-input-windows = { path = "../../crates/ras-input-windows" }

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
