[package]
name = "casual-ras"
version = "0.0.3"
edition = "2021"
rust-version = "1.90"
license = "Apache-2.0"
authors = ["Casual RAS authors"]
publish = false
description = "Casual RAS — one desktop app that both shares this screen and connects to another, over iroh."

# The single unified desktop app (ADR-062). It plays **both** roles from one binary:
#   - **Connect** (viewer): dial a host's ticket, decode H.264 → WebCodecs → canvas. Cross-platform.
#   - **Share** (agent): capture this screen, ask local Allow/Deny consent, stream over iroh, and draw
#     the viewer's remote pointer on an overlay. macOS-only until the Linux/Windows capture backends land.
#
# Kept OUT of the root crate workspace (heavy Tauri/WebView deps; not needed for the core CI gates).
#
# `default-features = false` deliberately drops `ras-core`'s `insecure-no-auth` AllowAllValidator: a
# shipping product must never link the no-op consent seam. Because that validator is `#[cfg(feature =
# "insecure-no-auth")]`, in this build the type does not exist — any code path that reached for it
# would fail to compile, not silently downgrade to no-auth. The Share role implements a real
# `GrantValidator` (local Allow/Deny) — Invariant 1 (the local user authorizes; a controller never
# self-authorizes).

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
# `macos-private-api` backs `app.macOSPrivateApi = true` in tauri.conf.json — REQUIRED for genuinely
# transparent windows on macOS (without it the pointer overlay renders as an opaque white sheet over the
# host's own desktop). Uses private AppKit APIs, so this build is not App-Store-eligible (we distribute
# directly), which is fine.
tauri = { version = "2.11", features = ["macos-private-api"] }
# Signed auto-update (ADR-078). Verifies each update against an embedded Ed25519 (minisign) public
# key before applying — the FREE update-integrity layer, independent of the deferred paid OS
# code-signing/notarization (ADR-072). Inert until a signing key is provisioned (see the runbook).
tauri-plugin-updater = "2"
# Native OS notifications (industry-standard UX): raise a system notification + bring the app to
# focus when a viewer requests access / control / a file, or a chat arrives, so the local user (who
# owns the machine — Invariant 1) is never unaware of an inbound request. Notification bodies are
# content-free (no chat text, no secrets — Invariant 8).
tauri-plugin-notification = "2"
# Field diagnostics: a rotating log file in the OS log dir (+ stderr in dev) so an on-device failure
# (a connect that won't complete, a capture that won't start, a decoder that black-screens) leaves a
# trail to debug from — the app previously had ZERO logging. Records are strictly content-free
# (Invariant 8): event names, error codes, short public peer ids, counts — never pixels, keystrokes,
# clipboard, typed text, grant/token contents, or any secret.
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
ras-core = { path = "../../crates/ras-core", default-features = false }
# Contacts address book (ADR-092): the durable FileContactBook + the ContactBook gate, so a saved
# peer can be reached by identity (no ticket) and messages/requests are contacts-only.
ras-identity = { path = "../../crates/ras-identity" }
# Contact signaling (ADR-094/095): the SIGNAL_ALPN send/recv + gossip presence runtime.
ras-signal = { path = "../../crates/ras-signal" }
ras-media = { path = "../../crates/ras-media" }
ras-protocol = { path = "../../crates/ras-protocol" }
ras-transport-iroh = { path = "../../crates/ras-transport-iroh" }
# Cross-platform OS-clipboard write backend for the Share role (ADR-079). Sets the host clipboard on a
# capability-gated push; never pastes (ADR-076). Inert until clipboard.write is granted (default OFF).
ras-clipboard = { path = "../../crates/ras-clipboard" }
# Safe file-write backend for the signed-catalogue file transfer (ADR-090). Opens each accepted
# transfer's host-resolved destination with O_NOFOLLOW|O_CREAT|O_EXCL (refuses a symlink or an existing
# entry). The app wraps it in a `ras_core::FileWriteSink`. Inert until a `file.push.*` cap is granted.
ras-files = { path = "../../crates/ras-files" }
# The controller streams accepted file bytes as `bytes::Bytes` chunks (ADR-090). Same crate ras-core
# uses on the wire, so no extra version surface.
bytes = "1"
# Opus audio encoder for the Share role's output-audio pipeline (ADR-077/080). Cross-platform (vendored
# libopus). The host feeds it a per-OS `AudioCaptureBackend` via `HostSession::with_audio`; the pump only
# runs if the grant carries `audio.listen` AND the transport has an audio plane (both true here), so it is
# inert unless the host opted in on the Share screen (default OFF).
ras-audio-opus = { path = "../../crates/ras-audio-opus" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Per-platform sharing backends (ADR-063). macOS uses the zero-copy hardware path
# (ScreenCaptureKit + VideoToolbox); Linux (PipeWire) and Windows (WGC) capture via scap and encode
# with the OpenH264 software encoder. The Connect (viewer) role is decode-only and works everywhere.
[target.'cfg(target_os = "macos")'.dependencies]
ras-media-macos = { path = "../../crates/ras-media-macos" }
# Phase-3 OS-input backend: the Share role feeds the viewer's input to CGEvent through this. macOS-only
# (the parallel Windows/Linux backends are later).
ras-input-macos = { path = "../../crates/ras-input-macos" }
# Output-audio capture (ADR-077) + host-cursor-shape capture (ADR-073) backends for macOS. Fed to
# `HostSession::with_audio` / `with_cursor_observer`; both inert until their gate opens (audio needs the
# `audio.listen` grant + audio plane; the cursor observer is display-only, always safe to wire).
ras-audio-macos = { path = "../../crates/ras-audio-macos" }
ras-cursor-macos = { path = "../../crates/ras-cursor-macos" }
# Read each Tauri window's NSWindow.windowNumber (the CGWindowID) so we can exclude our own
# overlay/indicator windows from the shared capture. Pure-Rust objc2, no Swift bridge.
objc2 = "0.6"

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
ras-media-scap = { path = "../../crates/ras-media-scap" }
ras-media-openh264 = { path = "../../crates/ras-media-openh264" }

[target.'cfg(target_os = "linux")'.dependencies]
# Phase-3 OS-input backend for Linux (ADR-070): XTEST over pure-Rust x11rb. Feeds the viewer's input
# to the X server on X11/Xwayland sessions.
ras-input-linux = { path = "../../crates/ras-input-linux" }
# Output-audio capture (ADR-077) + host-cursor-shape capture (ADR-073) backends for Linux (PipeWire /
# X11 XFixes). Same wiring as macOS; audio inert until `audio.listen` is granted.
ras-audio-linux = { path = "../../crates/ras-audio-linux" }
ras-cursor-linux = { path = "../../crates/ras-cursor-linux" }

[target.'cfg(target_os = "windows")'.dependencies]
# Phase-3 OS-input backend for Windows (ADR-071): SendInput over windows-rs. In-session, no UIAccess
# (Inv 14). CI-compile-gated until Windows hardware/runner is available.
ras-input-windows = { path = "../../crates/ras-input-windows" }
# Exclude our own windows from OS screen capture on Windows (SetWindowDisplayAffinity /
# WDA_EXCLUDEFROMCAPTURE, Win10 2004+) — the "secure window" affinity password managers use. Pinned
# to the same windows-rs the rest of the workspace uses (ras-input/cursor/files-windows all on 0.58).
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
# Version-stable way to recover the raw HWND from a Tauri window without coupling to Tauri's internal
# windows-rs version (Tauri implements raw-window-handle 0.6).
raw-window-handle = "0.6"
# Output-audio capture (ADR-077, WASAPI loopback) + host-cursor-shape capture (ADR-073) backends for
# Windows. Same wiring as macOS; audio inert until `audio.listen` is granted.
ras-audio-windows = { path = "../../crates/ras-audio-windows" }
ras-cursor-windows = { path = "../../crates/ras-cursor-windows" }

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
