[package]
name = "casual-ras-controller"
version = "0.0.0"
edition = "2021"
rust-version = "1.90"
license = "Apache-2.0"
authors = ["Casual RAS authors"]
publish = false
description = "Casual RAS controller (Tauri v2 shell) — WebCodecs video path over a binary Channel."

# Kept OUT of the root crate workspace (heavy Tauri/WebView deps; not needed for the core CI gates).
# The video path (encoded H.264 → binary Channel → WebCodecs → canvas) is ADR-022/S3; the local
# mirror feed uses ras-media-macos so this is runnable glass-to-glass on one Mac before iroh lands.

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# testkit = the in-memory loopback transport (host↔controller in one process). Local-mirror only;
# the concrete iroh transport replaces it at step 4 behind the same SessionTransport seam.
ras-core = { path = "../../crates/ras-core", features = ["testkit"] }
ras-media = { path = "../../crates/ras-media" }
ras-protocol = { path = "../../crates/ras-protocol" }

# The local-mirror capture/encode feed is macOS-only (dev-lead). On other targets `start_mirror`
# returns an error and the app still builds/runs (the video path is source-agnostic).
[target.'cfg(target_os = "macos")'.dependencies]
ras-media-macos = { path = "../../crates/ras-media-macos" }

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
