[package]
name = "ras-audit"
description = "Casual RAS tamper-evident, hash-chained local audit journal."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ras-protocol = { path = "../ras-protocol" }
ras-identity = { path = "../ras-identity" }
sha2 = "0.10"

[lints]
workspace = true
