[package]
name = "ras-control"
description = "Casual RAS control leases, generations, and input routing."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ras-protocol = { path = "../ras-protocol" }
ras-policy = { path = "../ras-policy" }
getrandom = "0.2"

[lints]
workspace = true
