[package]
name = "ras-core"
description = "Casual RAS core: session orchestration and state machines tying the crates together."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
# PHASE-1 ONLY. Enables the no-op AllowAllValidator (view-only, no auth). Mutually exclusive with
# any future auth feature; a Phase-2 build must NOT enable this. Default-on only while Phase 1 is
# the active phase — remove from `default` when the real GrantValidator lands.
default = ["insecure-no-auth"]
insecure-no-auth = []
# In-memory paired transport + counting frame sink for exercising the orchestrators with no iroh /
# no OS (design §5.4 "synthetic in-memory impl in tests"). Always available to ras-core's own tests.
testkit = []

[dependencies]
bytes = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
ras-protocol = { path = "../ras-protocol" }
ras-identity = { path = "../ras-identity" }
ras-grant = { path = "../ras-grant" }
ras-policy = { path = "../ras-policy" }
ras-control = { path = "../ras-control" }
ras-audit = { path = "../ras-audit" }
ras-media = { path = "../ras-media" }
ras-transport-iroh = { path = "../ras-transport-iroh" }

[dev-dependencies]
# Tests build the synthetic capture/encode doubles and drive the loopback transport.
ras-media = { path = "../ras-media", features = ["synthetic"] }
# Generative testing of the frame codec + state machine.
proptest = "1"

# The runnable demo needs the in-memory loopback transport; skip it unless `testkit` is on so
# `cargo test --all` (default features) doesn't try to compile it.
[[example]]
name = "loopback_demo"
required-features = ["testkit"]

[lints]
workspace = true
