[package]
name = "ras-grant"
description = "Casual RAS access requests, session grants (PASETO v4.public), and the grant-issuer trait."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ras-protocol = { path = "../ras-protocol" }
ras-identity = { path = "../ras-identity" }
ras-policy = { path = "../ras-policy" }
ras-bootstrap = { path = "../ras-bootstrap" }
bytes = "1"
async-trait = "0.1"
getrandom = "0.2"

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
