[package]
name = "ras-input-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

# Linux OS-input backend (ADR-070, implements ADR-054/055). Implements the `ras-control::OsInputSink`
# trait over the X11 XTEST extension via the pure-Rust `x11rb` client. Deliberately UNPRIVILEGED: it
# connects to $DISPLAY as the logged-in user (no root, no /dev/uinput), so it works only inside an X11
# / Xwayland session and cannot reach the Wayland desktop or a locked greeter. `uinput` + libei paths
# are additive follow-ups behind the same trait (docs/19 §3).

[dependencies]
ras-control = { path = "../ras-control" }
ras-protocol = { path = "../ras-protocol" }

# XTEST bindings are Linux-only: on other targets this crate compiles to an empty lib so
# `cargo build --workspace` stays green on macOS/Windows CI. `x11rb` is pure-Rust (no C X11 libs),
# so — unlike `ras-input-macos` — this backend is `unsafe`-free and keeps the workspace lint defaults.
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", default-features = false, features = ["xtest"] }
